WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
314664
[JSC] Fix wasm callee cleanup to account for multiple conservative root scans
https://bugs.webkit.org/show_bug.cgi?id=314664
Summary
[JSC] Fix wasm callee cleanup to account for multiple conservative root scans
Vassili Bykov
Reported
2026-05-12 13:50:03 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-05-12 13:50:10 PDT
<
rdar://problem/176914701
>
Vassili Bykov
Comment 2
2026-05-12 13:53:34 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/64778
EWS
Comment 3
2026-05-13 09:53:08 PDT
Committed
313167@main
(0c06001c5522): <
https://commits.webkit.org/313167@main
> Reviewed commits have been landed. Closing PR #64778 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug