Source/JavaScriptCore/heap/Heap.h
@@ -635,6 +635,9 @@ public:
     // FIXME: We should have a way to clear Wasm::Callees pending destruction when the Module dies.
     void reportWasmCalleePendingDestruction(Ref<Wasm::Callee>&&);
     bool isWasmCalleePendingDestruction(Wasm::Callee&);
+
+    const TinyBloomFilter<uintptr_t>& boxedWasmCalleeFilter() const { return m_boxedWasmCalleeFilter; }
+    bool didDiscoverPendingWasmCallee(Wasm::Callee*);
 #endif
 
     // This is a debug function for checking who marked the target cell.
@@ -756,6 +759,10 @@ private:
     void gatherStackRoots(ConservativeRoots&);
     void gatherVMRoots(ConservativeRoots&);
     void beginMarking();
+#if ENABLE(WEBASSEMBLY)
+    void prepareWasmCalleeCleanup();
+    void finalizeWasmCalleeCleanup();
+#endif
     void visitCompilerWorklistWeakReferences();
     void removeDeadCompilerWorklistEntries();
     void updateObjectCounts();
@@ -944,6 +951,13 @@ private:
     
 #if ENABLE(WEBASSEMBLY)
     UncheckedKeyHashSet<Ref<Wasm::Callee>> m_wasmCalleesPendingDestruction WTF_GUARDED_BY_LOCK(m_wasmCalleesPendingDestructionLock);
+    // We snapshot m_wasmCalleesPendingDestruction at the start of GC rather than consulting it
+    // directly during scanning because new callees can be registered while we scan. Without the
+    // snapshot, a callee could be added after we already passed its frame, never get recorded
+    // as discovered, and be incorrectly destroyed.
+    UncheckedKeyHashSet<const Wasm::Callee*> m_wasmCalleesPendingDestructionSnapshot;
+    UncheckedKeyHashSet<const Wasm::Callee*> m_wasmCalleesDiscoveredDuringGC;
+    TinyBloomFilter<uintptr_t> m_boxedWasmCalleeFilter;
 #endif
 
     std::unique_ptr<MarkStackArray> m_sharedCollectorMarkStack;
